implemented register user
